--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.vac.appfirebasecm">
 
+    <!-- 🔐 Permiso requerido para Android 13+ -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:name=".MiApp"
         android:allowBackup="true"
@@ -15,6 +18,7 @@
         android:theme="@style/Theme.AppFireBaseCM"
         tools:targetApi="31">
 
+        <!-- 🚀 Actividad principal -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -25,13 +29,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<service android:name="com.home.FcmService"
-    android:exported="false">
-    <intent-filter>
-        <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-    </intent-filter>
-</service>
 
+        <!-- 📩 Servicio de Firebase Cloud Messaging -->
+        <service
+            android:name="com.home.FcmService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
 
     </application>
 
